--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -184,7 +184,7 @@
             <li><a href="https://corporate.bang-olufsen.com/it/partners/automotive"><i><b>C. Guastavino, V. Larcher, G. Catusseau, P. Boussard - "Spatial Audio Quality Evaluation: Comparing Transaural, Ambisonics and Stereo" (2007)</b></i></a></li>
             <li><a href="https://hal.science/hal-03456711/file/I3DA_SpatialSoundDesign_DUPRE_FinalSubmission.pdf"><i><b>T. Dupré, S. Denjean, M. Aramaki, R. Kronland-Martinet - "Spatial Sound Design in a Car Cockpit: Challenges and Perspectives"
                     (2021)</b></i></a></li>
-            <li><a href="http://pcfarina.eng.unipr.it/Public/I3DA-2021/Low_Frequency_Simulations_for_Ambisonics_Auralization_of_a_Car_Sound_System.pdf"><i><b>A. Farina, D. Pinardi, J-S. Park - "Low Frequency Simulations for Ambisonics Auralization of a Car Sound System"</b></i></a></li>
+            <li><a href="http://pcfarina.eng.unipr.it/Public/I3DA-2021/Low_Frequency_Simulations_for_Ambisonics_Auralization_of_a_Car_Sound_System.pdf"><i><b>A. Farina, D. Pinardi, J-S. Park - "Low Frequency Simulations for Ambisonics Auralization of a Car Sound System" (2021)</b></i></a></li>
           </ul>
           </p>
         </div>
