--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -167,6 +167,7 @@
             <strong>Acoustic</strong>
           </h5>
           <ul>
+            <li><a href="https://monoskop.org/images/d/d4/Schafer_R_Murray_The_Soundscape_Our_Sonic_Environment_and_the_Tuning_of_the_World_1994.pdf"><i><b>R. Murray Schafer - "The soundscape: Our sonic environment and the tuning of the world" (1994)</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/tesi_giordano.pdf"><i><b>M. Giordano - "Modellazione e Simulazione del Campo Acustico in Cavità a Geometria e Caratteristiche Acustiche Variabili" (1996)</b></i></a></li>
             <li><a href="http://www.asp.c.dendai.ac.jp/thesis/zTransfer-Function_Measurement_with_Sweeps_AES_2001443.PDF"><i><b>S. Muller, P. Massarani - "Transfer-Function Measurement with Sweeps" (2001)</b></i></a></li>
             <li><a href="https://www.researchgate.net/publication/237067964_Directional_Audio_Coding_in_Spatial_Sound_Reproduction_and_Stereo_Upmixing"><i><b>V. Pulkki - "Directional Audio Coding in Spatial Sound Reproduction and Stereo Upmixing" (2006)</b></i></a></li>
