--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -183,7 +183,8 @@
           </h5>
           <ul>
             <li><a href="https://www.academia.edu/4958143/SUBJECTIVE_COMPARISON_BETWEEN_STEREO_DIPOLE_AND_3D_AMBISONIC_SURROUND_SYSTEMS_FOR_AUTOMOTIVE_APPLICATIONS"><i><b>A. Farina, E. Ugolotti - "Subjective comparison between Stereo Dipole and 3D Ambisonics surround systems for automotive applications" (1999)</b></i></a></li>
-            <li><a href="https://corporate.bang-olufsen.com/it/partners/automotive"><i><b>C. Guastavino, V. Larcher, G. Catusseau, P. Boussard - "Spatial Audio Quality Evaluation: Comparing Transaural, Ambisonics and Stereo" (2007)</b></i></a></li>
+            <li><a href="https://www.academia.edu/22220504/Spatial_Audio_Quality_Evaluation_Comparing_Transaural_Ambisonics_and_Stereo"><i><b>C. Guastavino, V. Larcher, G. Catusseau, P. Boussard - "Spatial Audio Quality Evaluation: Comparing Transaural, Ambisonics and Stereo" (2007)</b></i></a></li>
+            <li><a href="https://hal.science/hal-00463369/document"><i><b>J-F. Sciabica, M-C. Bezat, V. Roussarie, R. Kronland-Martinet, S. Ystad - "Towards the timbre modeling of interior car sound" (2009)</b></i></a></li>
             <li><a href="https://hal.science/hal-03456711/file/I3DA_SpatialSoundDesign_DUPRE_FinalSubmission.pdf"><i><b>T. Dupré, S. Denjean, M. Aramaki, R. Kronland-Martinet - "Spatial Sound Design in a Car Cockpit: Challenges and Perspectives"
                     (2021)</b></i></a></li>
             <li><a href="http://pcfarina.eng.unipr.it/Public/I3DA-2021/Low_Frequency_Simulations_for_Ambisonics_Auralization_of_a_Car_Sound_System.pdf"><i><b>A. Farina, D. Pinardi, J-S. Park - "Low Frequency Simulations for Ambisonics Auralization of a Car Sound System" (2021)</b></i></a></li>
