--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -164,10 +164,10 @@
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
           <h5 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
-            <strong>Acoustic</strong>
+            <strong>Acoustic & Audio Engineering</strong>
           </h5>
           <ul>
-            <li><a href="https://aes2.org/publications/"><i><b>AES Publications</b></i></a></li>
+            <li><a href="https://aes2.org/publications/"><i><b>Audio Engineering Society Publications</b></i></a></li>
             <li><a href="https://www.ee.columbia.edu/~dpwe/papers/Chown71-moving.pdf"><i><b>J. M. Chowning - "The Simulation of Moving Sound Sources" (1971)</b></i></a></li>
             <li><a href="https://monoskop.org/images/d/d4/Schafer_R_Murray_The_Soundscape_Our_Sonic_Environment_and_the_Tuning_of_the_World_1994.pdf"><i><b>R. Murray Schafer - "The soundscape: Our sonic environment and the tuning of the world" (1994)</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/tesi_giordano.pdf"><i><b>M. Giordano - "Modellazione e Simulazione del Campo Acustico in Cavità a Geometria e Caratteristiche Acustiche Variabili" (1996)</b></i></a></li>
