--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -168,14 +168,17 @@
           </h5>
           <ul>
             <li><a href="https://aes2.org/publications/"><i><b>Audio Engineering Society Publications</b></i></a></li>
+            <li><a href="https://intothesoundfield.music.ox.ac.uk/technical-papers"><i><b>Michael Gerzon Techical Articles and Papers</b></i></a></li>
             <li><a href="https://www.ee.columbia.edu/~dpwe/papers/Chown71-moving.pdf"><i><b>J. M. Chowning - "The Simulation of Moving Sound Sources" (1971)</b></i></a></li>
             <li><a href="https://monoskop.org/images/d/d4/Schafer_R_Murray_The_Soundscape_Our_Sonic_Environment_and_the_Tuning_of_the_World_1994.pdf"><i><b>R. Murray Schafer - "The soundscape: Our sonic environment and the tuning of the world" (1994)</b></i></a></li>
+            <li><a href="https://www.researchgate.net/publication/344006275_Spatial_Hearing_The_Psychophysics_of_Human_Sound_Localization"><i><b>J. Blauert - "Spatial Hearing: The Psychophysics of Human Sound Localization" (1996)</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/tesi_giordano.pdf"><i><b>M. Giordano - "Modellazione e Simulazione del Campo Acustico in Cavità a Geometria e Caratteristiche Acustiche Variabili" (1996)</b></i></a></li>
             <li><a href="http://www.asp.c.dendai.ac.jp/thesis/zTransfer-Function_Measurement_with_Sweeps_AES_2001443.PDF"><i><b>S. Muller, P. Massarani - "Transfer-Function Measurement with Sweeps" (2001)</b></i></a></li>
             <li><a href="https://www.researchgate.net/publication/237067964_Directional_Audio_Coding_in_Spatial_Sound_Reproduction_and_Stereo_Upmixing"><i><b>V. Pulkki - "Directional Audio Coding in Spatial Sound Reproduction and Stereo Upmixing" (2006)</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/Master_Handbook_of_Acoustics_5th_Edition_(2009)_(Everest).pdf"><i><b>F. A. Everest, K. C. Pohlmann - "Master Handbook of Acoustics" (2009)</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/acoustics-for-engineers-2nd_troy-lectures.pdf"><i><b>J. Blauert, N. Xiang - "Acoustics for Engineers" (2009)</b></i></a></li>
             <li><a href="http://www.angelofarina.it/Public/Fisica-Tecnica-Ambientale-2015/Lez-07/Cap.1_AcusticaInEdilizia.pdf"><i><b>A. Farina - "Principi Base di Acustica, capitolo 1" (2015)</b></i></a></li>
+            <li><a href="https://www.researchgate.net/publication/317617940_Spatial_Audio_for_Soundscape_Design_Recording_and_Reproduction"><i><b>J. Y. Hong, J. He, B. Lam, R. Gupta, W-S. Gan - "Spatial Audio for Soundscape Design: Recordingand Reproduction" (2017)</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/zotter_frank_ambisonic_2019.pdf"><i><b>F. Zotter, M. Frank - "Ambisonic, A Practical 3D Audio Theory for Recording, Studio Production, Sound Reinforcement, and Virtual Reality" (2019)</b></i></a></li>
             <li><a href="https://gitlab.com/giuseppesilvi/metp"><i><b>G. Silvi - METP - "Musica Elettronica Tecnologia e Pensiero" (open-book since )</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_ambienti_musicali.html"><i><b>M. Giordano, G. K. Velitchkova - "Acoustic of Musical Enviroments" (2021)</b></i></a></li>
