--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -108,18 +108,12 @@
             <li><a href="" target="_blank"><b>The Need of Space</b></a></li>
             <li><a href="" target="_blank"><b>3D Sound: What Do You Mean? The Importance of Terminology</b></a></li>
             <li><a href="" target="_blank"><b>Configuration and Calibration</b></a></li>
-            <ul>
-              <li><a href="" target="_blank"><b>List of Softwares</b></a></li>
-              <li><a href="" target="_blank"><b>Different System = Different Wave</b></a></li>
-            </ul>
+            <li><a href="" target="_blank"><b>Different System = Different Wave</b></a></li>
             <li><a href="" target="_blank"><b>Electric Vehicles: What's Possible</b></a></li>
-            <ul>
-              <ul>
-                <li><a href="" target="_blank"><b>Countless Field of Control</b></a></li>
-                <li><a href="" target="_blank"><b>Real Time +1 sample</b></a></li>
-              </ul>
-              <li><a href="" target="_blank"><b>Sweet Spot</b></a></li>
-              </p>
+            <li><a href="" target="_blank"><b>Countless Field of Control</b></a></li>
+            <li><a href="" target="_blank"><b>Sweet Spot</b></a></li>
+          </ul>
+            </p>
         </div>
       </div>
     </div>
@@ -170,16 +164,20 @@
             <li><a href="https://aes2.org/publications/"><i><b>Audio Engineering Society Publications</b></i></a></li>
             <li><a href="https://intothesoundfield.music.ox.ac.uk/technical-papers"><i><b>Michael Gerzon Techical Articles and Papers</b></i></a></li>
             <li><a href="https://www.ee.columbia.edu/~dpwe/papers/Chown71-moving.pdf"><i><b>J. M. Chowning - "The Simulation of Moving Sound Sources" (1971)</b></i></a></li>
-            <li><a href="https://monoskop.org/images/d/d4/Schafer_R_Murray_The_Soundscape_Our_Sonic_Environment_and_the_Tuning_of_the_World_1994.pdf"><i><b>R. Murray Schafer - "The soundscape: Our sonic environment and the tuning of the world" (1994)</b></i></a></li>
+            <li><a href="https://monoskop.org/images/d/d4/Schafer_R_Murray_The_Soundscape_Our_Sonic_Environment_and_the_Tuning_of_the_World_1994.pdf"><i><b>R. Murray Schafer - "The soundscape: Our sonic environment and the tuning of the world"
+                    (1994)</b></i></a></li>
             <li><a href="https://www.researchgate.net/publication/344006275_Spatial_Hearing_The_Psychophysics_of_Human_Sound_Localization"><i><b>J. Blauert - "Spatial Hearing: The Psychophysics of Human Sound Localization" (1996)</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/tesi_giordano.pdf"><i><b>M. Giordano - "Modellazione e Simulazione del Campo Acustico in Cavità a Geometria e Caratteristiche Acustiche Variabili" (1996)</b></i></a></li>
             <li><a href="http://www.asp.c.dendai.ac.jp/thesis/zTransfer-Function_Measurement_with_Sweeps_AES_2001443.PDF"><i><b>S. Muller, P. Massarani - "Transfer-Function Measurement with Sweeps" (2001)</b></i></a></li>
-            <li><a href="https://www.researchgate.net/publication/237067964_Directional_Audio_Coding_in_Spatial_Sound_Reproduction_and_Stereo_Upmixing"><i><b>V. Pulkki - "Directional Audio Coding in Spatial Sound Reproduction and Stereo Upmixing" (2006)</b></i></a></li>
+            <li><a href="https://www.researchgate.net/publication/237067964_Directional_Audio_Coding_in_Spatial_Sound_Reproduction_and_Stereo_Upmixing"><i><b>V. Pulkki - "Directional Audio Coding in Spatial Sound Reproduction and Stereo Upmixing"
+                    (2006)</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/Master_Handbook_of_Acoustics_5th_Edition_(2009)_(Everest).pdf"><i><b>F. A. Everest, K. C. Pohlmann - "Master Handbook of Acoustics" (2009)</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/acoustics-for-engineers-2nd_troy-lectures.pdf"><i><b>J. Blauert, N. Xiang - "Acoustics for Engineers" (2009)</b></i></a></li>
             <li><a href="http://www.angelofarina.it/Public/Fisica-Tecnica-Ambientale-2015/Lez-07/Cap.1_AcusticaInEdilizia.pdf"><i><b>A. Farina - "Principi Base di Acustica, capitolo 1" (2015)</b></i></a></li>
-            <li><a href="https://www.researchgate.net/publication/317617940_Spatial_Audio_for_Soundscape_Design_Recording_and_Reproduction"><i><b>J. Y. Hong, J. He, B. Lam, R. Gupta, W-S. Gan - "Spatial Audio for Soundscape Design: Recordingand Reproduction" (2017)</b></i></a></li>
-            <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/zotter_frank_ambisonic_2019.pdf"><i><b>F. Zotter, M. Frank - "Ambisonic, A Practical 3D Audio Theory for Recording, Studio Production, Sound Reinforcement, and Virtual Reality" (2019)</b></i></a></li>
+            <li><a href="https://www.researchgate.net/publication/317617940_Spatial_Audio_for_Soundscape_Design_Recording_and_Reproduction"><i><b>J. Y. Hong, J. He, B. Lam, R. Gupta, W-S. Gan - "Spatial Audio for Soundscape Design: Recordingand
+                    Reproduction" (2017)</b></i></a></li>
+            <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/zotter_frank_ambisonic_2019.pdf"><i><b>F. Zotter, M. Frank - "Ambisonic, A Practical 3D Audio Theory for Recording, Studio Production, Sound Reinforcement, and Virtual
+                    Reality" (2019)</b></i></a></li>
             <li><a href="https://gitlab.com/giuseppesilvi/metp"><i><b>G. Silvi - METP - "Musica Elettronica Tecnologia e Pensiero" (open-book since )</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_ambienti_musicali.html"><i><b>M. Giordano, G. K. Velitchkova - "Acoustic of Musical Enviroments" (2021)</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/Cafe_OTO_Acoustic_Analysis_of_the_Environment.pdf"><i><b>G. K. Velitchkova - "Cafe OTO, Acoustic Analysis of the Environment" (2022)</b></i></a></li>
@@ -188,12 +186,15 @@
             <strong>Automotive</strong>
           </h5>
           <ul>
-            <li><a href="https://www.academia.edu/4958143/SUBJECTIVE_COMPARISON_BETWEEN_STEREO_DIPOLE_AND_3D_AMBISONIC_SURROUND_SYSTEMS_FOR_AUTOMOTIVE_APPLICATIONS"><i><b>A. Farina, E. Ugolotti - "Subjective comparison between Stereo Dipole and 3D Ambisonics surround systems for automotive applications" (1999)</b></i></a></li>
-            <li><a href="https://www.academia.edu/22220504/Spatial_Audio_Quality_Evaluation_Comparing_Transaural_Ambisonics_and_Stereo"><i><b>C. Guastavino, V. Larcher, G. Catusseau, P. Boussard - "Spatial Audio Quality Evaluation: Comparing Transaural, Ambisonics and Stereo" (2007)</b></i></a></li>
+            <li><a href="https://www.academia.edu/4958143/SUBJECTIVE_COMPARISON_BETWEEN_STEREO_DIPOLE_AND_3D_AMBISONIC_SURROUND_SYSTEMS_FOR_AUTOMOTIVE_APPLICATIONS"><i><b>A. Farina, E. Ugolotti - "Subjective comparison between Stereo Dipole and 3D
+                    Ambisonics surround systems for automotive applications" (1999)</b></i></a></li>
+            <li><a href="https://www.academia.edu/22220504/Spatial_Audio_Quality_Evaluation_Comparing_Transaural_Ambisonics_and_Stereo"><i><b>C. Guastavino, V. Larcher, G. Catusseau, P. Boussard - "Spatial Audio Quality Evaluation: Comparing
+                    Transaural, Ambisonics and Stereo" (2007)</b></i></a></li>
             <li><a href="https://hal.science/hal-00463369/document"><i><b>J-F. Sciabica, M-C. Bezat, V. Roussarie, R. Kronland-Martinet, S. Ystad - "Towards the timbre modeling of interior car sound" (2009)</b></i></a></li>
             <li><a href="https://hal.science/hal-03456711/file/I3DA_SpatialSoundDesign_DUPRE_FinalSubmission.pdf"><i><b>T. Dupré, S. Denjean, M. Aramaki, R. Kronland-Martinet - "Spatial Sound Design in a Car Cockpit: Challenges and Perspectives"
                     (2021)</b></i></a></li>
-            <li><a href="http://pcfarina.eng.unipr.it/Public/I3DA-2021/Low_Frequency_Simulations_for_Ambisonics_Auralization_of_a_Car_Sound_System.pdf"><i><b>A. Farina, D. Pinardi, J-S. Park - "Low Frequency Simulations for Ambisonics Auralization of a Car Sound System" (2021)</b></i></a></li>
+            <li><a href="http://pcfarina.eng.unipr.it/Public/I3DA-2021/Low_Frequency_Simulations_for_Ambisonics_Auralization_of_a_Car_Sound_System.pdf"><i><b>A. Farina, D. Pinardi, J-S. Park - "Low Frequency Simulations for Ambisonics Auralization of
+                    a Car Sound System" (2021)</b></i></a></li>
           </ul>
           </p>
         </div>
