--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -188,6 +188,7 @@
           <ul>
             <li><a href="https://www.academia.edu/4958143/SUBJECTIVE_COMPARISON_BETWEEN_STEREO_DIPOLE_AND_3D_AMBISONIC_SURROUND_SYSTEMS_FOR_AUTOMOTIVE_APPLICATIONS"><i><b>A. Farina, E. Ugolotti - "Subjective comparison between Stereo Dipole and 3D
                     Ambisonics surround systems for automotive applications" (1999)</b></i></a></li>
+            <li><a href="http://www.conforg.fr/acoustics2008/cdrom/data/fa2005-budapest/paper/694-0.pdf"><i><b>H. Hansen, R. Weber, U. Letens - "Quantifying tonal phonomena in interior car sounds" (2005)</b></i></a></li>" (2005)</b></i></a></li>
             <li><a href="https://www.academia.edu/22220504/Spatial_Audio_Quality_Evaluation_Comparing_Transaural_Ambisonics_and_Stereo"><i><b>C. Guastavino, V. Larcher, G. Catusseau, P. Boussard - "Spatial Audio Quality Evaluation: Comparing
                     Transaural, Ambisonics and Stereo" (2007)</b></i></a></li>
             <li><a href="https://hal.science/hal-00463369/document"><i><b>J-F. Sciabica, M-C. Bezat, V. Roussarie, R. Kronland-Martinet, S. Ystad - "Towards the timbre modeling of interior car sound" (2009)</b></i></a></li>
