--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -104,6 +104,10 @@
             <strong>INDEX</strong>
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
+            The purpose of this handbook is to bring notions, tips and possible solutions litteraly to the hand of the sound engineer while approaching to the automotive immersive sound field.
+            This text is an historycal and technical summary of the most relevant articles, books, papers and general notions related to acoustics, sound engineering.
+            We will frequently refer to the material mentioned above; it's not a purpose of this book to leave the readers fully informed about all the touched topics, infact we will frequenctly redirect them to the original source for futher studies.
+
           <ul>
             <li><a href="" target="_blank"><b>The Need of Space</b></a></li>
             <li><a href="" target="_blank"><b>3D Sound: What Do You Mean? The Importance of Terminology</b></a></li>
