--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -98,16 +98,17 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-10">
+          <p class="mbr-text mbr-fonts-style display-7">
+            The purpose of this handbook is to bring notions, tips and possible solutions litteraly to the hand of the sound engineers while approaching to the automotive immersive sound tuning.
+            This text is an historycal and technical summary of the most relevant articles, books, papers and general notions related to acoustics, sound engineering and sound design.
+            We will frequently refer to the material mentioned above; it's not a purpose of this book to leave the readers fully informed about all the touched topics, infact we will frequenctly redirect them to the original source for futher studies.
+            On the other hand, this text will focus over results, conclusions and solutions in order to give an immediate view of the state of arts and to provide a practical approach to the matter.
           <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
             <br>
             <br>
             <strong>INDEX</strong>
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
-            The purpose of this handbook is to bring notions, tips and possible solutions litteraly to the hand of the sound engineer while approaching to the automotive immersive sound field.
-            This text is an historycal and technical summary of the most relevant articles, books, papers and general notions related to acoustics, sound engineering.
-            We will frequently refer to the material mentioned above; it's not a purpose of this book to leave the readers fully informed about all the touched topics, infact we will frequenctly redirect them to the original source for futher studies.
-
           <ul>
             <li><a href="" target="_blank"><b>The Need of Space</b></a></li>
             <li><a href="" target="_blank"><b>3D Sound: What Do You Mean? The Importance of Terminology</b></a></li>
