--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -112,7 +112,7 @@
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
-            <li><a href="" target="_blank"><b>The Need of Space</b></a></li>
+            <li><a href="" target="_blank"><b>Evolution of spatial audio reproduction systems</b></a></li>
             <li><a href="" target="_blank"><b>3D Sound: What Do You Mean? The Importance of Terminology</b></a></li>
             <li><a href="" target="_blank"><b>Configuration and Calibration</b></a></li>
             <li><a href="" target="_blank"><b>Different System = Different Wave</b></a></li>
@@ -120,11 +120,38 @@
             <li><a href="" target="_blank"><b>Countless Field of Control</b></a></li>
             <li><a href="" target="_blank"><b>Sweet Spot</b></a></li>
           </ul>
+
             </p>
         </div>
       </div>
     </div>
   </section>
+
+  <!-- Title-->
+<section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="title col-md-12 col-lg-10">
+                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Evolution of spatial audio reproduction systems</h3>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Image-->
+<section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+  <div class="container-fluid">
+    <div class="row justify-content-center">
+      <div class="col-12 col-lg-5">
+        <div class="image-wrapper">
+          <img src="https://www.gabrielavelitch.com/img/automotive_immersive_sound/soundscape_design_process.webp" alt="www.gabrielavelitch.com">
+          <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Proposed approach for soundscape design developement in car cockpit adapted from <a href="https://www.researchgate.net/publication/317617940_Spatial_Audio_for_Soundscape_Design_Recording_and_Reproduction"><i><b>J. Y. Hong, J. He, B. Lam, R. Gupta, W-S. Gan - "Spatial Audio for Soundscape Design: Recordingand
+                  Reproduction" (2017)</b></i></a></p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
   <!-- Appendix-->
 
