--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -132,10 +132,35 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
-                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Evolution of spatial audio reproduction systems</h3>
+                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Evolution of Spatial Audio Reproduction Systems</h3>
             </div>
         </div>
     </div>
+</section>
+
+<!-- Image-->
+<section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+  <div class="container-fluid">
+    <div class="row justify-content-center">
+      <div class="col-12 col-lg-5">
+        <div class="image-wrapper">
+          <img src="https://www.gabrielavelitch.com/img/automotive_immersive_sound/history.webp" alt="www.gabrielavelitch.com">
+          <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"> Timeline of the evolution of spatial audio reproduction systems</b></i></a></p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Title-->
+<section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
+  <div class="container">
+      <div class="row justify-content-center">
+          <div class="title col-md-12 col-lg-10">
+              <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Soundscape Design Developement</h3>
+          </div>
+      </div>
+  </div>
 </section>
 
 <!-- Image-->
