--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -113,7 +113,7 @@
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
             <li><a href="" target="_blank"><b>Evolution of spatial audio reproduction systems</b></a></li>
-            <li><a href="" target="_blank"><b>3D Sound: What Do You Mean? The Importance of Terminology</b></a></li>
+            <li><a href="" target="_blank"><b>Soundscape Design Developement</b></a></li>
             <li><a href="" target="_blank"><b>Configuration and Calibration</b></a></li>
             <li><a href="" target="_blank"><b>Different System = Different Wave</b></a></li>
             <li><a href="" target="_blank"><b>Electric Vehicles: What's Possible</b></a></li>
