--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -163,6 +163,20 @@
   </div>
 </section>
 
+<!-- Text-->
+<section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-12 col-lg-8">
+        <p class="mbr-text mbr-fonts-style display-7">
+          A soundscappe design developement approach has been proposed in <a href="https://www.researchgate.net/publication/317617940_Spatial_Audio_for_Soundscape_Design_Recording_and_Reproduction"><i><b>this publication</b></i></a>
+          and it's graphic rappresentation is shown below:
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
 <!-- Image-->
 <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
   <div class="container-fluid">
