--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -103,7 +103,8 @@
           <p class="mbr-text mbr-fonts-style display-7">
             The purpose of this handbook is to bring notions, tips and possible solutions litteraly to the hand of the sound engineers while approaching to the automotive immersive sound tuning.
             This text is an historycal and technical summary of the most relevant articles, books, papers and general notions related to acoustics, sound engineering and sound design.
-            We will frequently refer to the material mentioned above; it's not a purpose of this book to leave the readers fully informed about all the touched topics, infact we will frequenctly redirect them to the original source for futher studies.
+            We will frequently refer to the material mentioned above; it's not a purpose of this book to leave the readers fully informed about all the touched topics, infact we will frequenctly redirect them to the original source for futher
+            studies.
             On the other hand, this text will focus over results, conclusions and solutions in order to give an immediate view of the state of arts and to provide a practical approach to the matter.
           <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
             <br>
@@ -116,81 +117,83 @@
             <li><a href="" target="_blank"><b>Soundscape Design Developement</b></a></li>
             <li><a href="" target="_blank"><b>Configuration and Calibration</b></a></li>
             <li><a href="" target="_blank"><b>Different System = Different Wave</b></a></li>
-            <li><a href="" target="_blank"><b>Electric Vehicles: What's Possible</b></a></li>
+            <li><a href="" target="_blank"><b>Electric Vehicles Sound Feedback</b></a></li>
+            Shepard-Risset illusion
             <li><a href="" target="_blank"><b>Countless Field of Control</b></a></li>
             <li><a href="" target="_blank"><b>Sweet Spot</b></a></li>
           </ul>
 
-            </p>
+          </p>
         </div>
       </div>
     </div>
   </section>
 
   <!-- Title-->
-<section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
+  <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
     <div class="container">
-        <div class="row justify-content-center">
-            <div class="title col-md-12 col-lg-10">
-                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Evolution of Spatial Audio Reproduction Systems</h3>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- Image-->
-<section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
-  <div class="container-fluid">
-    <div class="row justify-content-center">
-      <div class="col-12 col-lg-5">
-        <div class="image-wrapper">
-          <img src="https://www.gabrielavelitch.com/img/automotive_immersive_sound/history.webp" alt="www.gabrielavelitch.com">
-          <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"> Timeline of the evolution of spatial audio reproduction systems</b></i></a></p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- Title-->
-<section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
-  <div class="container">
       <div class="row justify-content-center">
-          <div class="title col-md-12 col-lg-10">
-              <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Soundscape Design Developement</h3>
-          </div>
-      </div>
-  </div>
-</section>
-
-<!-- Text-->
-<section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-12 col-lg-8">
-        <p class="mbr-text mbr-fonts-style display-7">
-          A soundscappe design developement approach has been proposed in <a href="https://www.researchgate.net/publication/317617940_Spatial_Audio_for_Soundscape_Design_Recording_and_Reproduction"><i><b>this publication</b></i></a>
-          and it's graphic rappresentation is shown below:
-        </p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- Image-->
-<section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
-  <div class="container-fluid">
-    <div class="row justify-content-center">
-      <div class="col-12 col-lg-5">
-        <div class="image-wrapper">
-          <img src="https://www.gabrielavelitch.com/img/automotive_immersive_sound/soundscape_design_process.webp" alt="www.gabrielavelitch.com">
-          <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Proposed approach for soundscape design developement in car cockpit adapted from <a href="https://www.researchgate.net/publication/317617940_Spatial_Audio_for_Soundscape_Design_Recording_and_Reproduction"><i><b>J. Y. Hong, J. He, B. Lam, R. Gupta, W-S. Gan - "Spatial Audio for Soundscape Design: Recordingand
-                  Reproduction" (2017)</b></i></a></p>
+        <div class="title col-md-12 col-lg-10">
+          <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Evolution of Spatial Audio Reproduction Systems</h3>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
+
+  <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/automotive_immersive_sound/history.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"> Timeline of the evolution of spatial audio reproduction systems</b></i></a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Title-->
+  <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="title col-md-12 col-lg-10">
+          <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Soundscape Design Developement</h3>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <p class="mbr-text mbr-fonts-style display-7">
+            A soundscappe design developement approach has been proposed in <a href="https://www.researchgate.net/publication/317617940_Spatial_Audio_for_Soundscape_Design_Recording_and_Reproduction"><i><b>this publication</b></i></a>
+            and it's graphic rappresentation is shown below:
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/automotive_immersive_sound/soundscape_design_process.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Proposed approach for soundscape design developement in car cockpit adapted from <a
+                href="https://www.researchgate.net/publication/317617940_Spatial_Audio_for_Soundscape_Design_Recording_and_Reproduction"><i><b>J. Y. Hong, J. He, B. Lam, R. Gupta, W-S. Gan - "Spatial Audio for Soundscape Design: Recordingand
+                    Reproduction" (2017)</b></i></a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Appendix-->
 
@@ -203,7 +206,7 @@
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
             <a href="https://www.genelec.com/immersive-hub?https%3A%2F%2Fwww.genelec.com%2Fimmersive-hub%3Futm_source=google&utm_medium=cpc&utm_campaign=immersive_audio_hub&gad_source=1&gclid=Cj0KCQiA6vaqBhCbARIsACF9M6mEjSI_UHT6bI2E0eVQ-ODhwtf6aV0XGWvJ-1k20HHYQqiO4Uz737caAuZ-EALw_wcB#section-cmscontent_INSTANCE_rAmfFFB10rhh"
-              target="_blank"><b>Genelec Immersive Hub - Immersive Audio Formats:</b></a>
+              target="_blank"><b>Immersive Audio Formats</b></a>
           <ul>
             <li>Dolby Atmos</li>
             <li>Auro-3D</li>
@@ -213,7 +216,10 @@
             <li>ITU-R and Pure Research</li>
             <li>THX Spatial Audio</li>
           </ul>
-          <a href="http://pcfarina.eng.unipr.it/Aurora/HOA_explicit_formulas.htm"><i><b>A. Farina - "Explicit Ambix formulas for High Order Ambisonics"</b></i></a>
+          <ul>
+            <li><a href="http://pcfarina.eng.unipr.it/Aurora/HOA_explicit_formulas.htm"><i><b>A. Farina - "Explicit Ambix formulas for High Order Ambisonics"</b></i></a></li>
+            <li><a href="https://www.edmunds.com/glossary/"><i><b>Alphabetical Glossary of Automotive Terms</b></i></a></li>
+          </ul>
           </p>
         </div>
       </div>
