--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -205,20 +205,20 @@
             <strong>APPENDIX</strong>
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
+          <ul>
             <a href="https://www.genelec.com/immersive-hub?https%3A%2F%2Fwww.genelec.com%2Fimmersive-hub%3Futm_source=google&utm_medium=cpc&utm_campaign=immersive_audio_hub&gad_source=1&gclid=Cj0KCQiA6vaqBhCbARIsACF9M6mEjSI_UHT6bI2E0eVQ-ODhwtf6aV0XGWvJ-1k20HHYQqiO4Uz737caAuZ-EALw_wcB#section-cmscontent_INSTANCE_rAmfFFB10rhh"
               target="_blank"><b>Immersive Audio Formats</b></a>
-          <ul>
-            <li>Dolby Atmos</li>
-            <li>Auro-3D</li>
-            <li>Sony 360 Reality Audio</li>
-            <li>MPEG-H 3D Audio</li>
-            <li>DTS:X</li>
-            <li>ITU-R and Pure Research</li>
-            <li>THX Spatial Audio</li>
-          </ul>
-          <ul>
-            <li><a href="http://pcfarina.eng.unipr.it/Aurora/HOA_explicit_formulas.htm"><i><b>A. Farina - "Explicit Ambix formulas for High Order Ambisonics"</b></i></a></li>
-            <li><a href="https://www.edmunds.com/glossary/"><i><b>Alphabetical Glossary of Automotive Terms</b></i></a></li>
+            <ul>
+              <li><a href="https://www.dolby.com/technologies/dolby-atmos/"><b>Dolby Atmos</b></a></li>
+              <li><a href="https://www.auro-3d.com"><b>Auro-3D</b></a></li>
+              <li><a href="https://electronics.sony.com/360-reality-audio"><b>Sony 360 Reality Audio</b></a></li>
+              <li><a href="https://mpegh.com"><b>MPEG-H 3D Audio</b></a></li>
+              <li><a href="https://dts.com/dtsx/"><b>DTS:X</b></a></li>
+              <li><a href="https://www.itu.int/pub/R-REP"><b>ITU-R and Pure Research</b></a></li>
+              <li><a href="https://www.razer.com/thx-spatial-audio"><b>THX Spatial Audio</b></a></li>
+            </ul>
+            <li><a href="http://pcfarina.eng.unipr.it/Aurora/HOA_explicit_formulas.htm"><b>A. Farina - "Explicit Ambix formulas for High Order Ambisonics"</b></a></li>
+            <li><a href="https://www.edmunds.com/glossary/"><b>Alphabetical Glossary of Automotive Terms</b></a></li>
           </ul>
           </p>
         </div>
