--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -206,8 +206,9 @@
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
-            <a href="https://www.genelec.com/immersive-hub?https%3A%2F%2Fwww.genelec.com%2Fimmersive-hub%3Futm_source=google&utm_medium=cpc&utm_campaign=immersive_audio_hub&gad_source=1&gclid=Cj0KCQiA6vaqBhCbARIsACF9M6mEjSI_UHT6bI2E0eVQ-ODhwtf6aV0XGWvJ-1k20HHYQqiO4Uz737caAuZ-EALw_wcB#section-cmscontent_INSTANCE_rAmfFFB10rhh"
-              target="_blank"><b>Immersive Audio Formats</b></a>
+            <li><a
+                href="https://www.genelec.com/immersive-hub?https%3A%2F%2Fwww.genelec.com%2Fimmersive-hub%3Futm_source=google&utm_medium=cpc&utm_campaign=immersive_audio_hub&gad_source=1&gclid=Cj0KCQiA6vaqBhCbARIsACF9M6mEjSI_UHT6bI2E0eVQ-ODhwtf6aV0XGWvJ-1k20HHYQqiO4Uz737caAuZ-EALw_wcB#section-cmscontent_INSTANCE_rAmfFFB10rhh"
+                target="_blank"><b>Immersive Audio Formats</b></a></li>
             <ul>
               <li><a href="https://www.dolby.com/technologies/dolby-atmos/"><b>Dolby Atmos</b></a></li>
               <li><a href="https://www.auro-3d.com"><b>Auro-3D</b></a></li>
