--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -266,17 +266,19 @@
             <strong>Automotive</strong>
           </h5>
           <ul>
-            <li><a href="https://www.academia.edu/4958143/SUBJECTIVE_COMPARISON_BETWEEN_STEREO_DIPOLE_AND_3D_AMBISONIC_SURROUND_SYSTEMS_FOR_AUTOMOTIVE_APPLICATIONS"><i><b>A. Farina, E. Ugolotti - "Subjective comparison between Stereo Dipole and 3D
-                    Ambisonics surround systems for automotive applications" (1999)</b></i></a></li>
-            <li><a href="http://www.conforg.fr/acoustics2008/cdrom/data/fa2005-budapest/paper/694-0.pdf"><i><b>H. Hansen, R. Weber, U. Letens - "Quantifying tonal phonomena in interior car sounds" (2005)</b></i></a></li>" (2005)</b></i></a></li>
-            <li><a href="https://www.academia.edu/22220504/Spatial_Audio_Quality_Evaluation_Comparing_Transaural_Ambisonics_and_Stereo"><i><b>C. Guastavino, V. Larcher, G. Catusseau, P. Boussard - "Spatial Audio Quality Evaluation: Comparing
-                    Transaural, Ambisonics and Stereo" (2007)</b></i></a></li>
-            <li><a href="https://hal.science/hal-00463369/document"><i><b>J-F. Sciabica, M-C. Bezat, V. Roussarie, R. Kronland-Martinet, S. Ystad - "Towards the timbre modeling of interior car sound" (2009)</b></i></a></li>
-            <li><a href="https://hal.science/hal-03324608/document"><i><b>S. Denjean, R. Kronland-Martinet, V. Roussarie, S. Ystad - "Zero-Emission Vehicles Sonification Strategy Based on Shepard-Risset Glissando" (2019)</b></i></a></li>
-            <li><a href="https://hal.science/hal-03456711/file/I3DA_SpatialSoundDesign_DUPRE_FinalSubmission.pdf"><i><b>T. Dupré, S. Denjean, M. Aramaki, R. Kronland-Martinet - "Spatial Sound Design in a Car Cockpit: Challenges and Perspectives"
-                    (2021)</b></i></a></li>
-            <li><a href="http://pcfarina.eng.unipr.it/Public/I3DA-2021/Low_Frequency_Simulations_for_Ambisonics_Auralization_of_a_Car_Sound_System.pdf"><i><b>A. Farina, D. Pinardi, J-S. Park - "Low Frequency Simulations for Ambisonics Auralization of
-                    a Car Sound System" (2021)</b></i></a></li>
+            <li><a href="https://www.academia.edu/4958143/SUBJECTIVE_COMPARISON_BETWEEN_STEREO_DIPOLE_AND_3D_AMBISONIC_SURROUND_SYSTEMS_FOR_AUTOMOTIVE_APPLICATIONS"><i><b>1999, A. Farina, E. Ugolotti - "Subjective comparison between Stereo Dipole and
+                    3D
+                    Ambisonics surround systems for automotive applications"</b></i></a></li>
+            <li><a href="http://www.conforg.fr/acoustics2008/cdrom/data/fa2005-budapest/paper/694-0.pdf"><i><b>2005, H. Hansen, R. Weber, U. Letens - "Quantifying tonal phonomena in interior car sounds"</b></i></a></li>
+            <li><a href="https://www.academia.edu/22220504/Spatial_Audio_Quality_Evaluation_Comparing_Transaural_Ambisonics_and_Stereo"><i><b>2007, C. Guastavino, V. Larcher, G. Catusseau, P. Boussard - "Spatial Audio Quality Evaluation: Comparing
+                    Transaural, Ambisonics and Stereo"</b></i></a></li>
+            <li><a href="https://hal.science/hal-00463369/document"><i><b>2009, J-F. Sciabica, M-C. Bezat, V. Roussarie, R. Kronland-Martinet, S. Ystad - "Towards the timbre modeling of interior car sound"</b></i></a></li>
+            <li><a href="https://hal.science/hal-03324608/document"><i><b>2019, S. Denjean, R. Kronland-Martinet, V. Roussarie, S. Ystad - "Zero-Emission Vehicles Sonification Strategy Based on Shepard-Risset Glissando"</b></i></a></li>
+            <li><a href="https://hal.science/hal-03456711/file/I3DA_SpatialSoundDesign_DUPRE_FinalSubmission.pdf"><i><b>2021, T. Dupré, S. Denjean, M. Aramaki, R. Kronland-Martinet - "Spatial Sound Design in a Car Cockpit: Challenges and
+                    Perspectives"</b></i></a></li>
+            <li><a href="http://pcfarina.eng.unipr.it/Public/I3DA-2021/Low_Frequency_Simulations_for_Ambisonics_Auralization_of_a_Car_Sound_System.pdf"><i><b>2021, A. Farina, D. Pinardi, J-S. Park - "Low Frequency Simulations for Ambisonics
+                    Auralization of
+                    a Car Sound System"</b></i></a></li>
           </ul>
           </p>
         </div>
