--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -115,6 +115,11 @@
           <ul>
             <li><a href="" target="_blank"><b>Evolution of spatial audio reproduction systems</b></a></li>
             <li><a href="" target="_blank"><b>Soundscape Design Developement</b></a></li>
+            <ul>
+              <li><a href="" target="_blank"><b>Stage 1: Acoustic Fingerprint of the Vehicle</b></a></li>
+              <li><a href="" target="_blank"><b>Stage 2: Studies over the Virtual Acoustic Enviroment</b></a></li>
+              <li><a href="" target="_blank"><b>Stage 3: In-situ Installation</b></a></li>
+            </ul>
             <li><a href="" target="_blank"><b>Configuration and Calibration</b></a></li>
             <li><a href="" target="_blank"><b>Different System = Different Wave</b></a></li>
             <li><a href="" target="_blank"><b>Electric Vehicles Sound Feedback</b></a></li>
