--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -164,7 +164,29 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="title col-md-12 col-lg-10">
-          <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Soundscape Design Developement</h3>
+          <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Stage 1: Acoustic Fingerprint of the Vehicle</h3>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Title-->
+  <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="title col-md-12 col-lg-10">
+          <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Stage 2: Studies over the Virtual Acoustic Enviroment</h3>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Title-->
+  <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="title col-md-12 col-lg-10">
+          <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Stage 3: In-situ Installation</h3>
         </div>
       </div>
     </div>
@@ -195,6 +217,17 @@
                 href="https://www.researchgate.net/publication/317617940_Spatial_Audio_for_Soundscape_Design_Recording_and_Reproduction"><i><b>J. Y. Hong, J. He, B. Lam, R. Gupta, W-S. Gan - "Spatial Audio for Soundscape Design: Recordingand
                     Reproduction" (2017)</b></i></a></p>
           </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Title-->
+  <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="title col-md-12 col-lg-10">
+          <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Evolution of Spatial Audio Reproduction Systems</h3>
         </div>
       </div>
     </div>
