--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -211,6 +211,24 @@
     </div>
   </section>
 
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <p class="mbr-text mbr-fonts-style display-7">
+            During the first stage of the soundscape design developement the engineers will capture all the usefull in-situ sounds.
+            Specifing the targets of those captures is essential to guarantee a smooth and on focus study during th stage 2.
+            Some of the most important automotive sound targets are listed below:
+            <ul>
+            <li><b>Vehicle Acoustic Enviroment:</b> impulse response</li>
+            <li><b>Engine Sound:</b> Vehicle speed, engine speed for ICE vehicle measurements and throttle opening are recorded simultaneously</li>
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Title-->
   <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
     <div class="container">
@@ -283,7 +301,7 @@
           <ul>
             <li><a href="https://aes2.org/publications/"><i><b>Audio Engineering Society Publications</b></i></a></li>
             <li><a href="https://intothesoundfield.music.ox.ac.uk/technical-papers"><i><b>Michael Gerzon Techical Articles and Papers</b></i></a></li>
-            <li><a href="https://gitlab.com/giuseppesilvi/metp"><i><b>G. Silvi - METP - "Musica Elettronica Tecnologia e Pensiero" (open-book since)</b></i></a></li>
+            <li><a href="https://gitlab.com/giuseppesilvi/metp"><i><b>G. Silvi - METP - "Musica Elettronica Tecnologia e Pensiero" (open-book, fist commit on 3rd November 2019)</b></i></a></li>
             <li><a href="https://www.ee.columbia.edu/~dpwe/papers/Chown71-moving.pdf"><i><b>1971, J. M. Chowning - "The Simulation of Moving Sound Sources"</b></i></a></li>
             <li><a href="https://monoskop.org/images/d/d4/Schafer_R_Murray_The_Soundscape_Our_Sonic_Environment_and_the_Tuning_of_the_World_1994.pdf"><i><b>1994, R. Murray Schafer - "The soundscape: Our sonic environment and the tuning of the
                     world"</b></i></a></li>
