--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -218,11 +218,13 @@
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
             During the first stage of the soundscape design developement the engineers will capture all the usefull in-situ sounds.
-            Specifing the targets of those captures is essential to guarantee a smooth and on focus study during th stage 2.
+            Specifing the targets of those captures is essential to guarantee a smooth and on focus study during the stage 2.
             Some of the most important automotive sound targets are listed below:
             <ul>
-            <li><b>Vehicle Acoustic Enviroment:</b> impulse response</li>
-            <li><b>Engine Sound:</b> Vehicle speed, engine speed for ICE vehicle measurements and throttle opening are recorded simultaneously</li>
+            <li><b>Vehicle Acoustic Enviroment:</b> impulse response of the car</li>
+            <li><b>Vehicle Physical Sounds:</b> vehicle speed, tier/road sound</li>
+            <li><b>Vehicle Mechanical Sounds:</b> ICE engine noises, throttle opening, gearswitch</li>
+            <li><b>Vehicle Electric Sounds:</b> EV engine noises, battery cooling</li>
           </p>
         </div>
       </div>
