--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -217,7 +217,7 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            During the first stage of the soundscape design developement the engineers will capture all the usefull in-situ sounds.
+            During the first stage of the soundscape design developement the engineers will capture all the usefull in-situ and open road sounds.
             Specifing the targets of those captures is essential to guarantee a smooth and on focus study during the stage 2.
             Some of the most important automotive sound targets are listed below:
             <ul>
