--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -223,7 +223,7 @@
             <ul>
             <li><b>Vehicle Acoustic Enviroment:</b> impulse response of the car</li>
             <li><b>Vehicle Physical Sounds:</b> vehicle speed, tier/road sound</li>
-            <li><b>Vehicle Mechanical Sounds:</b> ICE engine noises, throttle opening, gearswitch</li>
+            <li><b>Vehicle Mechanical Sounds:</b> ICE engine noises, throttle opening, gearswitch, doors opening and other gadget sounds</li>
             <li><b>Vehicle Electric Sounds:</b> EV engine noises, battery cooling</li>
           </p>
         </div>
