--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -139,7 +139,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="title col-md-12 col-lg-10">
-          <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Evolution of Spatial Audio Reproduction Systems</h3>
+          <h4 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Evolution of Spatial Audio Reproduction Systems</h4>
         </div>
       </div>
     </div>
@@ -164,7 +164,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="title col-md-12 col-lg-10">
-          <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Evolution of Spatial Audio Reproduction Systems</h3>
+          <h4 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Soundscape Design Developement</h4>
         </div>
       </div>
     </div>
@@ -200,12 +200,23 @@
     </div>
   </section>
 
-  <!-- Title-->
-  <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="title col-md-12 col-lg-10">
-          <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Stage 1: Acoustic Fingerprint of the Vehicle</h3>
+        <div class="col-md-12 col-lg-8">
+          <h3>Stage 1: Acoustic Fingerprint of the Vehicle</h3>
+          <br>
+          <p class="mbr-text mbr-fonts-style display-7">
+            During the first stage of the soundscape design developement the engineers will capture all the usefull in-situ and open road sounds.
+            Specifing the targets of those captures is essential to guarantee a smooth and on focus study during the stage 2.
+            Some of the most important automotive sound targets are listed below:
+          <ul>
+            <li><b>Vehicle Acoustic Enviroment:</b> impulse response of the car</li>
+            <li><b>Vehicle Physical Sounds:</b> vehicle speed, tier/road sound</li>
+            <li><b>Vehicle Mechanical Sounds:</b> ICE engine noises, throttle opening, gearswitch, doors opening and other gadget sounds</li>
+            <li><b>Vehicle Electric Sounds:</b> EV engine noises, battery cooling</li>
+            </p>
         </div>
       </div>
     </div>
@@ -216,43 +227,30 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
+          <h3>Stage 2: Studies over the Virtual Acoustic Enviroment</h3>
+          <br>
           <p class="mbr-text mbr-fonts-style display-7">
-            During the first stage of the soundscape design developement the engineers will capture all the usefull in-situ and open road sounds.
-            Specifing the targets of those captures is essential to guarantee a smooth and on focus study during the stage 2.
-            Some of the most important automotive sound targets are listed below:
-            <ul>
-            <li><b>Vehicle Acoustic Enviroment:</b> impulse response of the car</li>
-            <li><b>Vehicle Physical Sounds:</b> vehicle speed, tier/road sound</li>
-            <li><b>Vehicle Mechanical Sounds:</b> ICE engine noises, throttle opening, gearswitch, doors opening and other gadget sounds</li>
-            <li><b>Vehicle Electric Sounds:</b> EV engine noises, battery cooling</li>
+
           </p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Title-->
-  <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="title col-md-12 col-lg-10">
-          <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Stage 2: Studies over the Virtual Acoustic Enviroment</h3>
+        <div class="col-md-12 col-lg-8">
+          <h3>Stage 3: In-situ Installation</h3>
+          <br>
+          <p class="mbr-text mbr-fonts-style display-7">
+
+          </p>
         </div>
       </div>
     </div>
   </section>
-
-  <!-- Title-->
-  <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="title col-md-12 col-lg-10">
-          <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Stage 3: In-situ Installation</h3>
-        </div>
-      </div>
-    </div>
-  </section>
-
 
 
   <!-- Appendix-->
