--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -117,6 +117,9 @@
             <li><a href="" target="_blank"><b>Soundscape Design Developement</b></a></li>
             <ul>
               <li><a href="" target="_blank"><b>Stage 1: Acoustic Fingerprint of the Vehicle</b></a></li>
+              <ul>
+                <li><a href="" target="_blank"><b>Definition of Automotive Sound Targets</b></a></li>
+              </ul>
               <li><a href="" target="_blank"><b>Stage 2: Studies over the Virtual Acoustic Enviroment</b></a></li>
               <li><a href="" target="_blank"><b>Stage 3: In-situ Installation</b></a></li>
             </ul>
@@ -203,9 +206,11 @@
           <h3>Stage 1: Acoustic Fingerprint of the Vehicle</h3>
           <br>
           <p class="mbr-text mbr-fonts-style display-7">
-            During the first stage of the soundscape design developement the engineers will capture all the usefull in-situ and open road sounds.
+            During the first stage of the soundscape design developement the engineers will capture all the usefull in-situ and open road sounds of the vehicle.
             Specifing the targets of those captures is essential to guarantee a smooth and on focus study during the stage 2.
-            Some of the most important automotive sound targets are listed below:
+          <h5>Definition of Automotive Sound Targets</h5>
+          <br>
+          Some of the most important automotive sound targets are listed below:
           <ul>
             <li><b>Vehicle Acoustic Enviroment:</b> impulse response of the car</li>
             <li><b>Vehicle Physical Sounds:</b> vehicle speed, tier/road sound</li>
