--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -105,7 +105,7 @@
             This text is an historycal and technical summary of the most relevant articles, books, papers and general notions related to acoustics, sound engineering and sound design.
             We will frequently refer to the material mentioned above; it's not a purpose of this book to leave the readers fully informed about all the touched topics, infact we will frequenctly redirect them to the original source for futher
             studies.
-            On the other hand, this text will focus over results, conclusions and solutions in order to give an immediate view of the state of arts and to provide a practical approach to the matter.
+            On the other hand, this text will focus over results, solutions, conclusions and perspecives in order to give an immediate view of the state of arts and to provide a practical approach to the matter.
           <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
             <br>
             <br>
@@ -137,7 +137,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="title col-md-12 col-lg-10">
-          <h4 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Evolution of Spatial Audio Reproduction Systems</h4>
+          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Evolution of Spatial Audio Reproduction Systems</strong></h4>
         </div>
       </div>
     </div>
@@ -162,7 +162,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="title col-md-12 col-lg-10">
-          <h4 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Soundscape Design Developement</h4>
+          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Soundscape Design Developement</strong></h4>
         </div>
       </div>
     </div>
@@ -211,6 +211,7 @@
           <h5>Definition of Automotive Sound Targets</h5>
           <br>
           Some of the most important automotive sound targets are listed below:
+          <br>
           <ul>
             <li><b>Vehicle Acoustic Enviroment:</b> impulse response of the car</li>
             <li><b>Vehicle Physical Sounds:</b> vehicle speed, tier/road sound</li>
