--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -214,8 +214,8 @@
           <br>
           <ul>
             <li><b>Vehicle Acoustic Enviroment:</b> impulse response of the car</li>
-            <li><b>Vehicle Physical Sounds:</b> vehicle speed, tier/road sound</li>
-            <li><b>Vehicle Mechanical Sounds:</b> ICE engine noises, throttle opening, gearswitch, doors opening and other gadget sounds</li>
+            <li><b>Vehicle Physical Sounds:</b> tier/road sound, wind from speed</li>
+            <li><b>Vehicle Mechanical Sounds:</b> ICE engine noises, vehicle speed, throttle opening, gearswitch, doors opening and other gadget sounds</li>
             <li><b>Vehicle Electric Sounds:</b> EV engine noises, battery cooling</li>
             </p>
         </div>
