--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -217,7 +217,11 @@
             <li><b>Vehicle Physical Sounds:</b> tier/road sound, wind from speed</li>
             <li><b>Vehicle Mechanical Sounds:</b> ICE engine noises, vehicle speed, throttle opening, gearswitch, doors opening and other gadget sounds</li>
             <li><b>Vehicle Electric Sounds:</b> EV engine noises, battery cooling</li>
-            </p>
+            <li><b>Vehicle External Sounds:</b> engine noises, tier/road</li>
+          </ul>
+          <p class="mbr-text mbr-fonts-style display-7">
+            
+          </p>
         </div>
       </div>
     </div>
